tests/exec/assert-eq-error.stderr
At line 1.10 On right side of ==
Error: "test"

Error occurred.
