tests/exec/assert-eq-error.exec
cmd: load assert-eq-error.ecl
status: 1
